# Image-Filter-Application

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MakeFile  README.md  bmp.h  helpers.cpp  helpers.h  main.cpp  makefile
.github/workflows/: codeql-analysis.yml
include/: bmp.h  filters.h  helpers.h
src/: filters.cpp  helpers.cpp
